--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 <H3> Collisions: An Undergraduate Physics Project </H3>
 <H4> Physics 170: Projectwork </H4>
 <H4> Guided By: Dr. Ajay Nath </H4>
+ <a href="https://drive.google.com/open?id=1EDfhIkF_bLG9HIDeE065TH5nNWmRTrZa">For our LateX Report Submission, Click Here.</a> 
+
+
 
     <canvas id="myCanvas" width="620" height="380"></canvas>
     <div id="buttons">
